add explanations to neighborhood expermiment notebook

--- a/neighbourhood.ipynb
+++ b/neighbourhood.ipynb
@@ -46,6 +46,38 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Testing the impact of the initial localization of SatisfIA agents on a neighborhood",
+   "id": "d78f60b95a47078e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Objective\n",
+    "> We want to compare the trajectories of a popuplation of SatisfIA between the two following conditions:\n",
+    "> 1) Random assignment\n",
+    "> 2) Assignment to a neighborhood: we pick a starting node at random, assign it as SatisfIA, and then assign all SatisfIA agents to its neighbours, and expand the neighbourhood progressively"
+   ],
+   "id": "4e8d5076a2a5e800"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Hypothesis\n",
+    "We expect that SatisfIA agents will have increased survival rate when they start in the same neighborhood"
+   ],
+   "id": "82aa123e2678f71a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Experiment",
+   "id": "3b19b95675f01b"
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "8ec1528d2e433fa0",
@@ -75,9 +107,7 @@
    "cell_type": "markdown",
    "id": "7a2b6368ebb5bcc",
    "metadata": {},
-   "source": [
-    "## Normal"
-   ]
+   "source": "### 1) Random assignment"
   },
   {
    "cell_type": "code",
@@ -125,9 +155,7 @@
    "cell_type": "markdown",
    "id": "ed08703550ce9b97",
    "metadata": {},
-   "source": [
-    "## By neighborhood"
-   ]
+   "source": "### Assignment by neighbourhood"
   },
   {
    "cell_type": "code",
@@ -172,49 +200,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "435c0587dff820eb",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-14T17:08:59.873152Z",
-     "start_time": "2024-08-14T17:08:59.871972Z"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Conclusion",
+   "id": "25fe4c43d5550131"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd55a8b6fc65523a",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb1cad91-eb4f-41f6-8b11-10aa33a91973",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f546398-ff30-432d-95f8-e44b5320a4d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f4822a8-84fd-4bc8-89c6-def39ed159bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "source": "Neighborhood assignment considerably reduces the speed of extinction, but doesn't seem to prevent it.",
+   "id": "58a5123fbbc4df2b"
   }
  ],
  "metadata": {
