--- a/graph_types.ipynb
+++ b/graph_types.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### **Ojective**\n",
+    "### **Objective**\n",
     "> We want to test networks with similar parameters, but with different connectivity types:\n",
     "> - Fully Connected\n",
     "> - Strogatz Small World\n",
